--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.5",
-    "csso-webpack-plugin": "^1.0.0-beta.7",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^2.30.1",
+    "csso-webpack-plugin": "^1.0.0-beta.10",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.5"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11"
   },
   "devDependencies": {},
   "scripts": {
