--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel-loader": "^7.1.2",
     "css-loader": "^0.28.5",
     "csso-webpack-plugin": "^1.0.0-beta.10",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "mini-css-extract-plugin": "^0.2.0",
     "style-loader": "^0.18.2",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11"
