--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "css-loader": "^0.28.5",
-    "csso-webpack-plugin": "^1.0.0-beta.10",
-    "mini-css-extract-plugin": "^0.2.0",
+    "csso-webpack-plugin": "file:../csso-webpack-plugin",
+    "mini-css-extract-plugin": "^1.4.0",
     "style-loader": "^0.18.2",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.11"
+    "webpack": "^5.28.0",
+    "webpack-cli": "^3.0.11"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   }
